chore: maintain code